fix(cases): annotation alignment

--- a/src/components/common/table-responsive.module.scss
+++ b/src/components/common/table-responsive.module.scss
@@ -37,14 +37,12 @@ $table-breakpoint: $viewport-lg;
 
 .annotation {
   position: relative;
+  margin-right: spacer(16);
+  margin-top: -2px; // ignore-style-rule
+  height: 18px; // ignore-style-rule
 }
 
-.annotation-cell {
-  width: 0;
-}
-
-td.annotation-cell {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: spacer(8);
+.date-cell span.value {
+  display: flex;
+  float: right;
 }
